# Hackfest

./: .env  .replit  README.md  ai_agent.py  app.py  audio_processor.py  crewai_agent.py  database_client.py  database_operations.py  employee_management.py  langchain_agent.py  pyproject.toml  receipt_processor.py  refund_processing.py  requirements.txt  storage_manager.py  supabase_client.py  utils.py
attached_assets/: Pasted-Hackfest-x-Datathon-Hackfest-x-Datathon-HxD-Problem-Statements-HxD-Problem-Statements--1745122281721.txt
